# mlops-real-time-fraud-detection-system

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.api  Dockerfile.streamlit  LICENSE  Makefile  README.md  best_xgb_params.json  compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
airflow/dags/: fraud_train_daily.py
common/: features.py  schemas.py
data/processed/: paysim_features.csv.dvc
data/raw/: metadata.json
notebooks/: 01_eda_paysim.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_model_xgboost.ipynb
reports/: eda_summary.md  training.md
reports/runs/2025-09-02/: best_xgb_params.json
scripts/: ci_metric_gate.py  promote_best.py  smoke_api.py  smoke_load.py  smoke_predict.py  smoke_registry.py  split_data.py
src/data_ingestion/: __init__.py  ingest.py
src/mlops_fraud/: features.py  schemas.py
src/mlops_fraud/data_ingestion/: __init__.py  ingest.py
src/mlops_fraud/deployment/: api.py
streamlit/: app.py
streamlit/data/: replay_sample.csv
tests/: test_api_contract.py  test_feature_alignment.py  test_features.py  test_schemas.py
training/hyperopt/: search_xgb.py  smoke_mlflow.py
training/pipelines/: evaluate.py  train_xgb.py
