[project]
name = "mlops-fraud"
version = "0.1.0"
requires-python = ">=3.9"
description = "End-to-end fraud MLOps project"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  "venv",
  ".venv",
  "notebooks",
  "mlruns",
  "reports",
]

select = ["E", "F"]
