[project]
name = "mlops-fraud"
version = "0.1.0"
requires-python = ">=3.13"
description = "End-to-end fraud MLOps project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
dependencies = []  # keep runtime deps in requirements.txt

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mlops_fraud*"]

# -------------------------------
# Ruff (linter + formatter)
# -------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
  "venv",
  ".venv",
  "notebooks",
  "mlruns",
  "reports",
  "models",
  "data",
]

[tool.ruff.lint]
# Keep the core rules; extend as needed
select = ["E", "F", "I", "B", "UP", "C4"]  # flake8, import sort, bugbear-lite, pyupgrade, comprehensions
ignore = []

# Allow long lines in DAGs and promotion scripts (lots of shell/f-strings)
per-file-ignores = {
  "airflow/dags/*.py" = ["E501"],
  "scripts/promote_best.py" = ["E501", "T201"],
}

[tool.ruff.lint.isort]
known-first-party = ["mlops_fraud"]
combine-as-imports = true
force-sort-within-sections = true
